fixed chrome arrow alignment

--- a/style/portfolio-style.css
+++ b/style/portfolio-style.css
@@ -85,7 +85,7 @@ body {
 
 .project-container .carousel {
 	margin-top: 2.2em;
-	background-color: var(--color-neutral-light);
+	background-color: var(--color-neutral-dark);
 	border-radius: var(--carousel-border-radius);
 }	
 
@@ -139,10 +139,12 @@ body {
 	
 .carousel-control-prev {
 	justify-content: left;
+	-webkit-justify-content: flex-start;
 }
 
 .carousel-control-next {
 	justify-content: right;
+	-webkit-justify-content: flex-end;
 }
 
 .project-container .carousel-control-next-icon {
